fixtures/cs-hash-03/good/pbkdf2-above-min.ts
import { pbkdf2Sync } from "crypto";

export function hashPassword(password: string, salt: string) {
	return pbkdf2Sync(password, salt, 600_000, 32, "sha256");
}
